[package]
name = "countdown-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
futures-util = { workspace = true }
nostr = { workspace = true }
serde_json = { workspace = true }
buzz-sdk = { path = "../../crates/buzz-sdk" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
